# async_dns

./: .editorconfig  .gitignore  README.md  aiodnsresolver.py  aiogethostbyname.py  pyproject.toml  setup.py  test.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
async_dns/: __init__.py  address.py  base.py  cache.py  hosts.py  types.py  udp.py
async_dns/core/: __init__.py  address.py  cache.py  hosts.py  logger.py  nameserver.py  protocol.py  rand.py  record.py  types.py  util.py  utils.py
async_dns/core/config/: __init__.py  nt.py  posix.py  root.py
async_dns/request/: __init__.py  tcp.py  udp.py  util.py
async_dns/request/doh/: __init__.py  client.py  request.py
async_dns/resolver/: __init__.py  __main__.py  base_resolver.py  client.py  proxy_resolver.py  query.py  recursive_resolver.py  tcp.py  udp.py  util.py
async_dns/resolver/doh/: __init__.py  request.py
async_dns/server/: __init__.py  __main__.py  serve.py
async_dns/utils/: __init__.py  nt.py  posix.py
pydns/: __init__.py  address.py  aresolver.py  base.py  cache.py  client.py  hosts.py  logger.py  resolver.py  server.py  types.py  utils.py
pydns/arequests/: __init__.py  tcp.py  udp.py
pydns/resolver/: __init__.py  __main__.py  cache.py  sync_deprecated.py  tcp.py  udp.py
pydns/server/: __init__.py  __main__.py
pydns/utils/: __init__.py  nt.py  posix.py
test/: __init__.py  __main__.py  resolver.py  utils.py
tests/: base.py  test_address.py  test_resolve.py  test_resolver.py  test_server.py  test_utils.py  util.py
tests/core/: test_address.py  test_cache.py  test_hosts.py  test_rand.py  test_record.py  test_utils.py
tests/fixtures/: hosts
tests/request/: test_doh.py  test_tcp.py  test_udp.py  util.py
tests/resolver/: test_client.py  test_resolver.py
(+3 files in other folders)
