[tool.poetry]
name = "async_dns"
version = "1.1.1"
description = "Asynchronous DNS client and server"
authors = ["Gerald <gera2ld@live.com>"]
license = "MIT"
keywords = ["async", "dns", "asyncio"]
repository = "https://github.com/gera2ld/async_dns"
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
