[tool.poetry]
name = "async_dns"
version = "1.1.10"
description = "Asynchronous DNS client and server"
authors = ["Gerald <gera2ld@live.com>"]
license = "MIT"
keywords = ["async", "dns", "asyncio"]
repository = "https://github.com/gera2ld/async_dns"
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
jedi = "^0.17.2"
pylint = "^2.6.0"
rope = "^0.18.0"
yapf = "^0.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
